--- a/index.html
+++ b/index.html
@@ -116,28 +116,28 @@
                             <ul class="section-d-soc">
                                 <li class="section-d-soc-item list">
                                     <a href="" class="section-d-soc-link">
-                                        <svg class="section-d-soc-icon" wigth="20" height="20">
+                                        <svg class="section-d-soc-icon" width="20" height="20">
                                             <use href="./img/symbol-defs.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="section-d-soc-item list">
                                     <a href="" class="section-d-soc-link">
-                                        <svg class="section-d-soc-icon" wigth="20" height="20">
+                                        <svg class="section-d-soc-icon" width="20" height="20">
                                             <use href="./img/symbol-defs.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="section-d-soc-item list">
                                     <a href="" class="section-d-soc-link">
-                                        <svg class="section-d-soc-icon" wigth="20" height="20">
+                                        <svg class="section-d-soc-icon" width="20" height="20">
                                             <use href="./img/symbol-defs.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="section-d-soc-item list">
                                     <a href="" class="section-d-soc-link">
-                                        <svg class="section-d-soc-icon" wigth="20" height="20">
+                                        <svg class="section-d-soc-icon" width="20" height="20">
                                             <use href="./img/symbol-defs.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
@@ -152,28 +152,28 @@
                             <ul class="section-d-soc">
                                 <li class="section-d-soc-item list">
                                     <a href="" class="section-d-soc-link">
-                                        <svg class="section-d-soc-icon" wigth="20" height="20">
+                                        <svg class="section-d-soc-icon" width="20" height="20">
                                             <use href="./img/symbol-defs.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="section-d-soc-item list">
                                     <a href="" class="section-d-soc-link">
-                                        <svg class="section-d-soc-icon" wigth="20" height="20">
+                                        <svg class="section-d-soc-icon" width="20" height="20">
                                             <use href="./img/symbol-defs.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="section-d-soc-item list">
                                     <a href="" class="section-d-soc-link">
-                                        <svg class="section-d-soc-icon" wigth="20" height="20">
+                                        <svg class="section-d-soc-icon" width="20" height="20">
                                             <use href="./img/symbol-defs.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="section-d-soc-item list">
                                     <a href="" class="section-d-soc-link">
-                                        <svg class="section-d-soc-icon" wigth="20" height="20">
+                                        <svg class="section-d-soc-icon" width="20" height="20">
                                             <use href="./img/symbol-defs.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
@@ -188,28 +188,28 @@
                             <ul class="section-d-soc">
                                 <li class="section-d-soc-item list">
                                     <a href="" class="section-d-soc-link">
-                                        <svg class="section-d-soc-icon" wigth="20" height="20">
+                                        <svg class="section-d-soc-icon" width="20" height="20">
                                             <use href="./img/symbol-defs.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="section-d-soc-item list">
                                     <a href="" class="section-d-soc-link">
-                                        <svg class="section-d-soc-icon" wigth="20" height="20">
+                                        <svg class="section-d-soc-icon" width="20" height="20">
                                             <use href="./img/symbol-defs.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="section-d-soc-item list">
                                     <a href="" class="section-d-soc-link">
-                                        <svg class="section-d-soc-icon" wigth="20" height="20">
+                                        <svg class="section-d-soc-icon" width="20" height="20">
                                             <use href="./img/symbol-defs.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="section-d-soc-item list">
                                     <a href="" class="section-d-soc-link">
-                                        <svg class="section-d-soc-icon" wigth="20" height="20">
+                                        <svg class="section-d-soc-icon" width="20" height="20">
                                             <use href="./img/symbol-defs.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
@@ -224,28 +224,28 @@
                             <ul class="section-d-soc">
                                 <li class="section-d-soc-item list">
                                     <a href="" class="section-d-soc-link">
-                                        <svg class="section-d-soc-icon" wigth="20" height="20">
+                                        <svg class="section-d-soc-icon" width="20" height="20">
                                             <use href="./img/symbol-defs.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="section-d-soc-item list">
                                     <a href="" class="section-d-soc-link">
-                                        <svg class="section-d-soc-icon" wigth="20" height="20">
+                                        <svg class="section-d-soc-icon" width="20" height="20">
                                             <use href="./img/symbol-defs.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="section-d-soc-item list">
                                     <a href="" class="section-d-soc-link">
-                                        <svg class="section-d-soc-icon" wigth="20" height="20">
+                                        <svg class="section-d-soc-icon" width="20" height="20">
                                             <use href="./img/symbol-defs.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="section-d-soc-item list">
                                     <a href="" class="section-d-soc-link">
-                                        <svg class="section-d-soc-icon" wigth="20" height="20">
+                                        <svg class="section-d-soc-icon" width="20" height="20">
                                             <use href="./img/symbol-defs.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
@@ -262,42 +262,42 @@
                 <ul class="clients-soc">
                     <li class="clients-soc-item list">
                         <a href="" class="clients-soc-link">
-                            <svg class="clients-soc-icon" wigth="106" height="60">
+                            <svg class="clients-soc-icon" width="106" height="60">
                                 <use href="./img/clients-defs.svg#yaco"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="clients-soc-item list">
                         <a href="" class="clients-soc-link">
-                            <svg class="clients-soc-icon" wigth="106" height="60">
+                            <svg class="clients-soc-icon" width="106" height="60">
                                 <use href="./img/clients-defs.svg#company-tagline"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="clients-soc-item list">
                         <a href="" class="clients-soc-link">
-                            <svg class="clients-soc-icon" wigth="106" height="60">
+                            <svg class="clients-soc-icon" width="106" height="60">
                                 <use href="./img/clients-defs.svg#company"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="clients-soc-item list">
                         <a href="" class="clients-soc-link">
-                            <svg class="clients-soc-icon" wigth="106" height="60">
+                            <svg class="clients-soc-icon" width="106" height="60">
                                 <use href="./img/clients-defs.svg#foster-peters"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="clients-soc-item list">
                         <a href="" class="clients-soc-link">
-                            <svg class="clients-soc-icon" wigth="106" height="60">
+                            <svg class="clients-soc-icon" width="106" height="60">
                                 <use href="./img/clients-defs.svg#brand"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="clients-soc-item list">
                         <a href="" class="clients-soc-link">
-                            <svg class="clients-soc-icon" wigth="106" height="60">
+                            <svg class="clients-soc-icon" width="106" height="60">
                                 <use href="./img/clients-defs.svg#company-tag-line"></use>
                             </svg>
                         </a>
@@ -326,28 +326,28 @@
                     <ul class="soc-footer">
                         <li class="footer-soc-item list">
                             <a href="" class="footer-soc-link">
-                                <svg class="footer-soc-icon" wigth="20" height="20">
+                                <svg class="footer-soc-icon" width="20" height="20">
                                     <use href="./img/symbol-defs.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="footer-soc-item list">
                             <a href="" class="footer-soc-link">
-                                <svg class="footer-soc-icon" wigth="20" height="20">
+                                <svg class="footer-soc-icon" width="20" height="20">
                                     <use href="./img/symbol-defs.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="footer-soc-item list">
                             <a href="" class="footer-soc-link">
-                                <svg class="footer-soc-icon" wigth="20" height="20">
+                                <svg class="footer-soc-icon" width="20" height="20">
                                     <use href="./img/symbol-defs.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="footer-soc-item list">
                             <a href="" class="footer-soc-link">
-                                <svg class="footer-soc-icon" wigth="20" height="20">
+                                <svg class="footer-soc-icon" width="20" height="20">
                                     <use href="./img/symbol-defs.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
