--- a/portfolio.html
+++ b/portfolio.html
@@ -28,11 +28,11 @@
             <div class="flex-contact">
                 <a href="mailto:info@devstudio.com" class="mail-a item">
                     <svg class="mail-a-svg">
-                        <use href="./img/symbol-defs.svg#icon-envelope" wigth="16" height="12"></use>
+                        <use href="./img/symbol-defs.svg#icon-envelope" width="16" height="12"></use>
                     </svg> info@devstudio.com
                 </a>
                 <a href="tel:+380961111111" class="tel-a item">
-                    <svg class="tel-a-svg" wigth="10" height="16">
+                    <svg class="tel-a-svg" width="10" height="16">
                         <use href="./img/symbol-defs.svg#icon-smartphone"></use>
                     </svg>+38 096 111 11 11
                 </a>
@@ -155,28 +155,28 @@
                     <ul class="soc-footer">
                         <li class="footer-soc-item list">
                             <a href="" class="footer-soc-link">
-                                <svg class="footer-soc-icon" wigth="20" height="20">
+                                <svg class="footer-soc-icon" width="20" height="20">
                                     <use href="./img/symbol-defs.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="footer-soc-item list">
                             <a href="" class="footer-soc-link">
-                                <svg class="footer-soc-icon" wigth="20" height="20">
+                                <svg class="footer-soc-icon" width="20" height="20">
                                     <use href="./img/symbol-defs.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="footer-soc-item list">
                             <a href="" class="footer-soc-link">
-                                <svg class="footer-soc-icon" wigth="20" height="20">
+                                <svg class="footer-soc-icon" width="20" height="20">
                                     <use href="./img/symbol-defs.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="footer-soc-item list">
                             <a href="" class="footer-soc-link">
-                                <svg class="footer-soc-icon" wigth="20" height="20">
+                                <svg class="footer-soc-icon" width="20" height="20">
                                     <use href="./img/symbol-defs.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
